test/puzzles/deitz/puzzle071108.chpl
writeln(1..3..5);
